--- a/.github/workflows/daily_weather.yml
+++ b/.github/workflows/daily_weather.yml
@@ -1,65 +1,68 @@
-name: 🌊 Daily Marine Weather Card
+name: Daily Marine Weather Card
 
 on:
-  # 6:30 AM AST = 10:30 AM UTC (AST is UTC-4)
+  # 6:30 AM AST = 10:30 AM UTC  (Puerto Rico is UTC-4, no daylight saving)
   schedule:
     - cron: "30 10 * * *"
 
-  # Also allow manual trigger from GitHub UI
+  # Allow manual run from the Actions tab at any time
   workflow_dispatch:
 
 jobs:
   generate-card:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
+
+    # Give the workflow permission to write back to the repo
+    permissions:
+      contents: write
 
     steps:
-      # ── 1. Checkout repo ──────────────────────────────────────────
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # ── 2. Set up Python ─────────────────────────────────────────
-      - name: Set up Python
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ── 3. Install wkhtmltoimage ──────────────────────────────────
       - name: Install wkhtmltoimage
         run: |
           sudo apt-get update -qq
           sudo apt-get install -y -qq wkhtmltopdf
-          wkhtmltoimage --version
+          wkhtmltoimage --version || true
 
-      # ── 4. Install Python dependencies ───────────────────────────
       - name: Install Python packages
-        run: pip install Pillow
+        run: pip install --quiet Pillow
 
-      # ── 5. Generate the weather card ─────────────────────────────
+      - name: Create output folder
+        run: mkdir -p output
+
       - name: Generate marine weather card
-        run: |
-          mkdir -p output
-          python scripts/generate_card.py
+        run: python scripts/generate_card.py
         env:
-          OUTPUT_DIR: output
+          OUTPUT_DIR: ${{ github.workspace }}/output
 
-      # ── 6. Upload card as artifact (viewable in GitHub Actions) ──
-      - name: Upload card artifact
+      - name: Verify image was created
+        run: |
+          ls -lh output/marine_forecast.jpg
+          echo "Image size: $(wc -c < output/marine_forecast.jpg) bytes"
+
+      - name: Upload image as workflow artifact
         uses: actions/upload-artifact@v4
         with:
-          name: marine-weather-card-${{ github.run_id }}
-          path: output/rabirubia_marine_latest.jpg
+          name: marine-weather-${{ github.run_id }}
+          path: output/marine_forecast.jpg
           retention-days: 30
 
-      # ── 7. Commit the new image back to the repo ─────────────────
-      #    The image will be in output/ folder in your repo.
-      #    Optional: comment out this step if you don't want to commit images.
       - name: Commit image to repository
         run: |
           git config user.name  "Rabirubia Weather Bot"
           git config user.email "bot@rabirubiaweather.com"
-          git add output/
-          git diff --staged --quiet || git commit -m "🌊 Marine weather card $(date +'%Y-%m-%d')"
+          git add output/marine_forecast.jpg
+          git diff --staged --quiet && echo "No changes to commit" || \
+            git commit -m "Marine weather card $(date +'%Y-%m-%d %H:%M UTC')"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
